# CC-pipeline

./: .gitignore  README.md
prototype/: README.md  pyproject.toml
prototype/docs/: cc_investigation_and_dedup.md  dedup_investigation_and_design.md
prototype/src/cc_pipeline/: __init__.py  candidates.py  cdxj.py  cli.py  columnar.py  dedup.py  filters.py  image.py  manifests.py  pipeline.py  schema.py  text.py  warc.py
prototype/src/cc_pipeline/extractors/: base.py  pdf.py
prototype/tests/: test_candidates.py  test_cdxj.py  test_columnar.py  test_exact_dedup.py  test_html_extractor.py  test_pipeline.py
recommended/: README.md  pyproject.toml
recommended/src/cc_pipeline/: __init__.py  athena.py  cli.py  dedup.py  pipeline.py  schema.py  warc.py
recommended/src/cc_pipeline/extractors/: __init__.py  html.py
recommended/tests/: test_athena.py  test_bulk_pipeline.py  test_pipeline.py  test_s3_warc.py  test_schema.py  test_warc.py
