[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-pipeline"
version = "0.1.0"
description = "HTML-first Common Crawl interleaved text-image pipeline"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = ["duckdb>=1.4.4"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cc-pipeline = "cc_pipeline.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
